# `overdrive-worker` ŌĆö worker subsystem per ADR-0029. Hosts
# `ExecDriver`, workload-cgroup management, and the `node_health`
# row writer at startup. Class `adapter-host`.

[package]
name         = "overdrive-worker"
version      = "0.0.0"
description  = "Worker subsystem: ExecDriver + workload-cgroup management + node_health writer."
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
publish                = false

[package.metadata.overdrive]
crate_class = "adapter-host"

[features]
# Workspace-wide convention. Every member declares this feature so
# `cargo {check,test,mutants} --features integration-tests` resolves
# uniformly under per-package scoping. Slice 2's real-process /
# real-cgroup tests live behind this gate. See
# `.claude/rules/testing.md` ┬¦ Workspace convention.
#
# Forwards to `overdrive-dataplane/integration-tests` so the worker's
# mTLS intercept component (`mtls_intercept_worker`) compiles in
# lock-step with the dataplane surface it drives (the `HostMtlsEnforcement`
# binding). The former `#[cfg(feature = "integration-tests")]` declared-peer
# redirect-stand-in seam was deleted at step 04-02 (the per-connection
# `MtlsResolve` consumer superseded it); the forward remains because the
# Tier-3 worker intercept-install suite is gated on it.
integration-tests = ["overdrive-dataplane/integration-tests"]

[dependencies]
overdrive-core.workspace = true
# transparent-mtls-host-socket (GH #26) ŌĆö provides the production
# `HostMtlsEnforcement` binding the worker composes against the
# `overdrive_core::traits::mtls_enforcement::MtlsEnforcement` port, plus the
# `integration-tests` feature-forward above. (The old cgroup_connect4_mtls
# `MtlsDataplane` surface was removed at step 04-01; the worker now installs
# the nft-TPROXY outbound intercept via its OWN `crate::mtls_intercept`
# (`install_outbound_tproxy`), not a dataplane call.) No cycle:
# `overdrive-dataplane` does NOT depend on `overdrive-worker`.
overdrive-dataplane.path = "../overdrive-dataplane"
async-trait.workspace    = true
hostname.workspace       = true
parking_lot.workspace    = true
rkyv.workspace           = true
serde.workspace          = true
thiserror.workspace      = true
tokio.workspace          = true
tracing.workspace        = true

libc = { workspace = true }
# `nix` ŌĆö safe Rust bindings to *nix syscalls. Used by `ExecDriver`'s
# opt-in `netns_path` builder to call `setns(CLONE_NEWNET)` in the
# `pre_exec` hook so the spawned child enters a caller-managed
# network namespace before `execve`. Mirrors the CNI spec model
# (`CNI_NETNS`) applied to native processes. Workspace-pinned with
# the `sched` feature per `.claude/rules/development.md`
# ┬¦ Dependencies.
nix.workspace = true

# `hyper` + `hyper-util` + `http-body-util` + `tokio-util` ŌĆö required
# by the service-health-check probes Phase 1 implementation per
# ADR-0054 ┬¦3 (production `HyperHttpProber` binding uses `hyper-util`'s
# legacy `Client` + `hyper::Request` + `http_body_util::Empty` request
# body + tokio timeouts). `hyper-util` + `tokio-util` were wired at
# 01-01; `hyper` + `http-body-util` land here at 02-01 alongside the
# HTTP-prober body. All pure-Rust HTTP/IO utilities with no build.rs
# surface; MIT-licensed (verified).
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
tokio-util.workspace = true

[dev-dependencies]
overdrive-sim.path  = "../overdrive-sim"
# `overdrive-host` ŌĆö production adapter crate (`adapter-host`). Used
# by the Tier 3 integration suite under
# `tests/integration/real_cgroup_fs/` (step 01-02 of the cgroup-fs-port
# migration) to exercise `RealCgroupFs::probe()` against real
# `/sys/fs/cgroup` and against a tempdir-scoped probe root. Dev-dep
# only ŌĆö production composition of `RealCgroupFs` into the worker
# subsystem happens at the binary boundary (`overdrive-cli`'s `serve`
# subcommand, per ADR-0054 ┬¦ Composition root wiring); the worker
# crate itself does NOT name the concrete production binding.
overdrive-host.path = "../overdrive-host"
proptest.workspace  = true
tempfile.workspace  = true
serial_test.workspace = true
tracing-subscriber.workspace = true
# `trybuild` ŌĆö compile-fail fixture harness per ADR-0054 ┬¦ migration
# step 01-01. Used to pin the post-01-05 `ExecDriver::new` arity at
# compile time (a constructor missing the mandatory
# `fs: Arc<dyn CgroupFs>` parameter must fail to compile, not at
# runtime). The fixture itself lands as a RED scaffold at 01-01 and
# goes GREEN at 01-05 when the arity change ships. Workspace-pinned
# at `=1.0.101` per `.claude/rules/testing.md` ┬¦ "Compile-fail testing
# (trybuild)" ŌĆö pin exactly to keep `.stderr` fixtures stable across
# rustc upgrades.
trybuild.workspace  = true

# transparent-mtls-enrollment (ADR-0071, step 05-01) ŌĆö the composed
# bidirectional Tier-3 walking skeleton
# (`tests/integration/bidirectional_walking_skeleton.rs`) re-authors a
# FRESH focused PKI + `HeldIdentities` + 0x17 wire-scan worker-side (the
# dataplane `tests/helpers/` are a reference to replicate, NOT a
# cross-crate import ŌĆö a crate's `tests/` tree is not exported). These
# are the test-only crypto/TLS primitives the real-mTLS handshakes +
# the cert-SAN extraction need, workspace-pinned per
# `.claude/rules/development.md` ┬¦ Dependencies. The mTLS substrate
# itself (`HostMtlsEnforcement`) is REUSED from the production
# `overdrive-dataplane` dep above ŌĆö these deps mint the test PKI + drive
# the test-side peers, not a re-implemented TLS stack.
rcgen.workspace          = true
rustls.workspace         = true
rustls-pemfile.workspace = true
x509-parser.workspace    = true

[lints]
workspace = true
